; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswresample/aarch64/extr_neontest.c_wrap.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswresample/aarch64/extr_neontest.c_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SwrContext = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @swr_convert(%struct.SwrContext* %0, i32** %1, i32 %2, i32** %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.SwrContext*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32**, align 8
  %11 = alloca i32, align 4
  store %struct.SwrContext* %0, %struct.SwrContext** %7, align 8
  store i32** %1, i32*** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32** %3, i32*** %10, align 8
  store i32 %4, i32* %11, align 4
  %12 = load %struct.SwrContext*, %struct.SwrContext** %7, align 8
  %13 = load i32**, i32*** %8, align 8
  %14 = load i32, i32* %9, align 4
  %15 = load i32**, i32*** %10, align 8
  %16 = load i32, i32* %11, align 4
  %17 = call i32 @testneonclobbers(i32 (%struct.SwrContext*, i32**, i32, i32**, i32)* @swr_convert, %struct.SwrContext* %12, i32** %13, i32 %14, i32** %15, i32 %16)
  %18 = load i32, i32* %6, align 4
  ret i32 %18
}

declare dso_local i32 @testneonclobbers(i32 (%struct.SwrContext*, i32**, i32, i32**, i32)*, %struct.SwrContext*, i32**, i32, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
